console: Fix table filters height on mobile

--- a/pkg/webui/components/table/table/table.styl
+++ b/pkg/webui/components/table/table/table.styl
@@ -17,9 +17,6 @@
   width: 100%
   display: table
 
-  +media-query($bp.lg)
-    margin-top: 8rem
-
   .empty-message
     display: table-caption
     caption-side: bottom
