--- a/pkg/webui/console/containers/gateway-status-panel/gateway-status-panel.styl
+++ b/pkg/webui/console/containers/gateway-status-panel/gateway-status-panel.styl
@@ -22,7 +22,8 @@
 
     .gtw-status-panel-upgrade-button
       background: var(--c-bg-brand-extralight)
-      color: var(--c-text-brand-normal)
+      // stylelint-disable-next-line declaration-no-important
+      color: var(--c-text-brand-normal) !important
       font-weight: $fw.bold
       box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, .09)
       margin-top: $cs.m
