--- a/pkg/webui/containers/fetch-table/fetch-table.styl
+++ b/pkg/webui/containers/fetch-table/fetch-table.styl
@@ -22,6 +22,7 @@
 
   +media-query($bp.lg)
     gap: $cs.m
+    height: fit-content
 
   &.top-rule
     border-normal('bottom')
